--- a/scss/homestyling.css
+++ b/scss/homestyling.css
@@ -566,7 +566,7 @@ h1 {
     font-size: 10px !important;
   }
   .hamburger {
-    top: 13%;
+    top: 14%;
   }
   .hoverdown {
     width: 100%;
@@ -921,7 +921,11 @@ footer nav {
   .hero .hero-text img {
     margin: auto;
     transform: scale(1.2);
-    top: 22%;
+    top: 20%;
+  }
+  .hero .hero-text a {
+    margin-top: 5%;
+    font-size: 1.5rem;
   }
   .hero h1 {
     font-size: 2.5rem;
@@ -956,7 +960,168 @@ footer nav {
     font-size: 1rem;
   }
   .hamburger {
+    top: 14%;
+  }
+  .top {
+    gap: 8px;
+  }
+  .top a {
+    font-size: 14px;
+  }
+  .block-link {
+    border-radius: 8px;
+    padding-left: 8px;
+    padding-right: 8px;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    font-size: 10px !important;
+  }
+  header p {
+    font-size: 0.85rem;
     top: 13%;
+  }
+  .tools-container {
+    gap: 5%;
+  }
+  .tools-container div img {
+    width: 75%;
+  }
+  .section2 div h3 {
+    font-size: 1rem;
+  }
+  .tools-container div a p {
+    font-size: 0.8rem;
+  }
+  .section2 div p {
+    width: 85%;
+  }
+  .section3-split {
+    gap: 2.5%;
+  }
+  .section3 img {
+    right: 0%;
+    top: -15%;
+    transform: rotate(0); /* or -15deg for opposite direction */
+    width: 65%;
+  }
+  .section3 a {
+    font-size: 0.8rem;
+  }
+  .links-container {
+    gap: 20px;
+    width: 50%;
+  }
+  .section3 h2 {
+    font-size: 1.5rem;
+  }
+  .links-container div h3 {
+    font-size: 1rem;
+  }
+  .links-container div a {
+    font-size: 0.8rem;
+  }
+  .links-container div {
+    word-wrap: break-word;
+  }
+  #join-us {
+    margin-top: 10%;
+  }
+  footer p {
+    margin-left: 5%;
+    font-size: 0.85rem;
+  }
+  .credits p {
+    font-size: 0.85rem;
+  }
+  .credits a {
+    margin-left: 5px;
+    font-size: 0.8rem;
+  }
+  .section2 div img {
+    margin-top: 2.5%;
+    margin-bottom: 2%;
+    width: 75%;
+  }
+  .section2 {
+    display: flex;
+    flex-direction: column;
+    padding-left: 5%;
+    margin-top: -5%;
+  }
+  .section2 h2 {
+    align-self: flex-start;
+  }
+  .social-media {
+    bottom: 50px;
+  }
+}
+/* Tablets (iPads) */
+@media (min-width: 768px) and (max-width: 1024px) {
+  /* iPad styles */
+  html {
+    overflow-x: hidden;
+  }
+  .top-bar {
+    height: 125px;
+  }
+  .hero {
+    display: flex;
+    flex-direction: column;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    margin-top: 20%;
+  }
+  .hero .hero-text {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+  }
+  .hero .hero-text img {
+    margin: auto;
+    transform: scale(1.2);
+    top: 20%;
+  }
+  .hero .hero-text a {
+    margin-top: 5%;
+    font-size: 1.5rem;
+  }
+  .hero h1 {
+    font-size: 2.5rem;
+    margin: auto;
+    margin-bottom: 2.5%;
+  }
+  .hero .onep1 {
+    font-size: 24px;
+    margin: auto;
+    margin-bottom: 2.5%;
+  }
+  .hero .onep2 {
+    font-size: 0.85rem;
+    margin: auto;
+    margin-bottom: 2.5%;
+  }
+  .hero img {
+    transform: scale(1.2);
+    margin: auto;
+    right: 0%;
+    margin-top: -3%;
+  }
+  .hero a {
+    font-size: 0.8rem;
+    margin: auto;
+    margin-bottom: 5%;
+  }
+  h2 {
+    font-size: 1.5rem;
+  }
+  h3 {
+    font-size: 1rem;
+  }
+  .hamburger {
+    top: 14%;
   }
   .top {
     gap: 8px;
