--- a/blogs/scss/blogs-home-styling.scss
+++ b/blogs/scss/blogs-home-styling.scss
@@ -36,11 +36,6 @@
     justify-content: center;
     padding: 60px 20px;
     background-color: white;
-
-    h2 {
-        font-size: $font-h1-size;
-        color: gray;
-    }
   }
   
   .blog-card {
@@ -51,6 +46,10 @@
     width: 300px;
     text-align: left;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
+
+    a {
+      text-decoration: none;
+    }
   
     &:hover {
       transform: translateY(-5px);
@@ -61,6 +60,13 @@
       font-size: 1.5rem;
       margin-bottom: 15px;
       color: black;
+    }
+
+    img {
+      display: block;
+      width: 100%;
+      margin: auto;
+      margin-bottom: 2.5%;
     }
   
     .blog-excerpt {
@@ -78,11 +84,47 @@
       border-radius: 20px;
       text-decoration: none;
       transition: background 0.3s ease;
+      
   
       &:hover {
         background-color: #333;
       }
     }
+  }
+
+  .blog-content {
+    margin: auto;
+    padding: 6%;
+
+    img {
+      display: block;
+      margin: auto;
+      width: 50%;
+      margin-top: 2.5%;
+      margin-bottom: 2.5%;
+    }
+
+    h1 {
+      font-size: $font-h1-size;
+    }
+
+    h2, h3 {
+      margin-bottom: 1%;
+    }
+
+    h2 {
+      font-size: $font-h2-size;
+    }
+
+    h3 {
+      font-size: $font-h3-size;
+    }
+
+    p {
+      font-size: $font-p-size;
+      margin-bottom: 2.5%;
+    }
+
   }
 
 @media screen and (max-width: 768px) {
