--- a/blogs/scss/blogs-home-styling.scss
+++ b/blogs/scss/blogs-home-styling.scss
@@ -4,6 +4,7 @@
 @import '../../scss/partials/index-form';
 @import '../../scss/partials/font-sizes';
 @import '../../scss/partials/hamburger';
+@import '../../scss/partials/text-styling';
 
 
 .blog-hero {
