--- a/blogs/scss/blogs-home-styling.css
+++ b/blogs/scss/blogs-home-styling.css
@@ -674,9 +674,15 @@ footer {
   background-color: #333;
 }
 
+.blog-layout {
+  display: flex;
+}
+
 .blog-content {
   margin: auto;
-  padding: 6%;
+  padding-top: 5%;
+  padding-left: 10%;
+  margin-right: 5%;
 }
 .blog-content img {
   display: block;
