--- a/blogs/scss/sidebar-styling.scss
+++ b/blogs/scss/sidebar-styling.scss
@@ -88,4 +88,21 @@
   .popular-posts a:hover {
     color: #61AC74;
   }
+
+
+  @media screen and (max-width: 768px) {
+
+    .blog-sidebar {
+      max-width: 150px;
+    }
+
+    .search-box {
+      flex-direction: column;
+    }
+    .search-box input {
+      width: 100px;
+    }
+
+  }
   
+
