--- a/blogs/scss/blogs-home-styling.css
+++ b/blogs/scss/blogs-home-styling.css
@@ -227,6 +227,7 @@ html {
   padding-left: 5%;
   padding-right: 5%;
   position: relative;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
 }
 #join-us h2 {
   font-size: 40px;
@@ -683,11 +684,12 @@ footer {
   padding-top: 5%;
   padding-left: 10%;
   margin-right: 5%;
+  margin-bottom: 2.5%;
 }
 .blog-content img {
   display: block;
   margin: auto;
-  width: 50%;
+  width: 60%;
   margin-top: 2.5%;
   margin-bottom: 2.5%;
 }
@@ -714,5 +716,17 @@ footer {
   }
   .blog-posts h2 {
     text-align: center;
+  }
+  .blog-content p {
+    font-size: 0.85rem;
+  }
+  .blog-content h1 {
+    font-size: 2.5rem;
+  }
+  .blog-content h2 {
+    font-size: 1.5rem;
+  }
+  .blog-content h3 {
+    font-size: 1rem;
   }
 }/*# sourceMappingURL=blogs-home-styling.css.map */
