--- a/individual-tools/indiv-tools-scss/indiv-tool-styling.css
+++ b/individual-tools/indiv-tools-scss/indiv-tool-styling.css
@@ -262,6 +262,7 @@ h1 {
   padding-left: 5%;
   padding-right: 5%;
   position: relative;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
 }
 #join-us h2 {
   font-size: 40px;
