--- a/scss/about-us-styling.css
+++ b/scss/about-us-styling.css
@@ -257,6 +257,7 @@ footer {
   padding-left: 5%;
   padding-right: 5%;
   position: relative;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
 }
 #join-us h2 {
   font-size: 40px;
