--- a/scss/partials/_get-connected-footer.scss
+++ b/scss/partials/_get-connected-footer.scss
@@ -6,6 +6,7 @@
   padding-left: 5%;
   padding-right: 5%;
   position: relative;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
 
   h2 {
       font-size: $font-h2-size;
