--- a/blogs/scss/blogs-home-styling.scss
+++ b/blogs/scss/blogs-home-styling.scss
@@ -99,6 +99,7 @@
 
   .blog-content {
     margin: auto;
+    margin-top: 5%;
     padding-top: 5%;
     padding-left: 10%;
     margin-right: 5%;
@@ -159,6 +160,9 @@
     }
 
     .blog-content {
+
+      margin-right: auto;
+      padding-right: 10%;
 
 
       p {
