--- a/blogs/scss/blogs-home-styling.scss
+++ b/blogs/scss/blogs-home-styling.scss
@@ -144,6 +144,11 @@
       font-size: 1.5rem;
     }
 
+    ul li p {
+      margin-top: 1.5%;
+      margin-bottom: 1.5%;
+    }
+
   }
 
 @media screen and (max-width: 768px) {
